<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.ui.login.LoginFragment"
    android:layout_margin="16dp">

    <ImageView
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/baseline_arrow_back_24"
        app:tint="?colorOnSecondaryContainer"
        android:contentDescription="@string/back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingTop="96dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/back"
        app:layout_constraintBottom_toTopOf="@id/dontHaveAccountLayout" >

        <LinearLayout
            android:gravity="center"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <!-- Title -->
            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Sign in to Your Account"
                android:fontFamily="@font/poppins_medium"
                android:textColor="?colorOnSecondaryContainer"
                android:textAppearance="@style/TextAppearance.Material3.HeadlineSmall"
                />

            <!-- Email field -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="42dp"
                app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.Small"
                app:suffixText="@string/email_suffix" >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editText_email"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/email_address"
                    android:fontFamily="@font/poppins_regular"
                    android:inputType="textEmailAddress" />

            </com.google.android.material.textfield.TextInputLayout>

            <!-- Password field -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.Small"
                app:endIconMode="password_toggle" >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editText_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="password"
                    android:hint="@string/password"
                    android:fontFamily="@font/poppins_regular"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Remember me checkbox -->
            <CheckBox
                android:layout_gravity="start"
                android:id="@+id/rememberMe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/remember_me"
                android:fontFamily="@font/poppins_regular"
                android:textColor="?colorOnSecondaryContainer"
                android:layout_marginTop="16dp" />

            <!-- Sign in button -->
            <Button
                android:layout_marginTop="16dp"
                android:id="@+id/signInButton"
                android:layout_width="match_parent"
                android:layout_height="58dp"
                android:text="@string/sign_in"
                android:textColor="?colorSurface"
                android:fontFamily="@font/poppins_medium"
                android:textAllCaps="true"
                android:backgroundTint="?colorOnSurface"
                android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
                app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.Full"
                />

        </LinearLayout>
    </ScrollView>

    <!-- Don't have an account -->
    <LinearLayout
        android:id="@+id/dontHaveAccountLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="32dp">

        <TextView
            android:id="@+id/dontHaveAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/don_t_have_an_account"
            android:fontFamily="@font/poppins_regular"
            android:textColor="?colorOnSecondaryContainer"
            android:layout_marginEnd="4dp"/>

        <TextView
            android:id="@+id/signUpLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:fontFamily="@font/poppins_medium"
            android:textColor="?colorPrimary"
            android:textStyle="bold" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
