<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="16dp"
    tools:context=".presentation.ui.password.PasswordFragment">

    <!-- App Bar -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/back"
            android:clickable="true"
            android:src="@drawable/baseline_arrow_back_24"
            app:tint="?colorOnSecondaryContainer"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView_page_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Change Password"
            android:fontFamily="@font/poppins_medium"
            android:textColor="?colorOnSecondaryContainer"
            android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Email field -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/appBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="32dp"
        app:suffixText="@string/email_suffix"
        app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.Small" >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editText_email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/email_address"
            android:fontFamily="@font/poppins_regular"
            android:autofillHints="emailAddress"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Current Password field -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout_current_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/textInputLayout_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.Small"
        app:endIconMode="password_toggle" >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editText_current_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/current_password"
            android:fontFamily="@font/poppins_regular"
            android:autofillHints="password"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- New Password field -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout_new_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/textInputLayout_current_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.Small"
        app:endIconMode="password_toggle"
        app:helperTextEnabled="true"
        app:helperText="@string/helper_text" >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editText_new_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/new_password"
            android:fontFamily="@font/poppins_regular"
            android:autofillHints="password"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Confirm New Password field -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout_confirm_new_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/textInputLayout_new_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.Small"
        app:endIconMode="password_toggle" >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editText_confirm_new_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="Confirm New Password"
            android:fontFamily="@font/poppins_regular"
            android:autofillHints="password"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Change Password Button -->
    <Button
        android:id="@+id/button_change_password"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:text="@string/accept"
        android:textColor="?colorSurface"
        android:fontFamily="@font/poppins_medium"
        android:textAllCaps="true"
        android:backgroundTint="?colorOnSurface"
        android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
        app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.Full"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textInputLayout_confirm_new_password"
        android:layout_marginTop="24dp"/>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>